--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,10 @@
 <!-- your app's js -->
 <script src="js/app.js"></script>
 <script src="js/controllers.js"></script>
+<script src="js/directives.js"></script>
+<script src="js/services/_services.js"></script>
+<script src="js/services/file_service.js"></script>
+<script src="js/services/geo_location_service.js"></script>
 </head>
 <body ng-app="dynamic-sports" animation="slide-left-right-ios7">
       <!-- 
